[package]
name = "huobi_future_async"
version = "0.1.1"
authors = ["foonsun<andyjoe318@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
tracing = "0.1"


tungstenite = "0.10"
tokio-tungstenite = { version = "0.10", features = ["tls"] }

url = "2"
futures = "0.3"
headers = "0.3"
http = "0.2"
maplit = "1"
once_cell = "1"
reqwest = { version = "0.10", features = ["json"] }
reqwest-ext = { git = "https://github.com/vorot93/reqwest-ext" }
snafu = "0.6"
streamunordered = "0.5"
tokio = { version = "0.2", features = ["tcp"] }

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.1.38"
ring = "0.13.0-alpha"
hex = "0.4"
base64 = "~0.6.0"
crypto = { version = "0.2.36", package = "rust-crypto" }
serialize = { version = "^0.3", package = "rustc-serialize" }
data-encoding = "2.1.2"
percent-encoding = "1.0.1"
log = "0.4.5"
simple_logger = "1.0.1"
flate2 = "1.0"
lazy_static = "1.4.0"
rand = "0.7.3"

[dev-dependencies]
csv = "1"
tokio = { version = "0.2", features = ["full"] }
tracing-subscriber = "0.2"

[lib]
name = "huobi_future_async"
path = "src/lib.rs"
